# aya-quickstart

./: .dir-locals.el  Cargo.toml  README.md
quickstart/: Cargo.toml
quickstart-common/: Cargo.toml
quickstart-common/src/: connect_event.rs  execve_event.rs  exit_event.rs  lib.rs  oom_event.rs
quickstart-ebpf/: Cargo.toml
quickstart-ebpf/src/: hello_xdp.rs  kprobe_unlink.rs  oomkill.rs  tcp_accept.rs  tcp_connect.rs  tp_execve.rs  tp_exit.rs  tp_kill.rs  tracepoint_sys_enter_openat.rs  tracepoint_sys_enter_write.rs  uprobe_readline.rs  utils.rs  vmlinux.rs  xdp_drop.rs  xdp_log.rs
quickstart/src/: hello_xdp.rs  kprobe_unlink.rs  oomkill.rs  tcpaccept.rs  tcpconnect.rs  tp_execve.rs  tp_exit.rs  tp_kill.rs  tracepoint_sys_enter_opanat.rs  tracepoint_sys_enter_openat.rs  tracepoint_sys_enter_write.rs  uprobe_readline.rs  xdp_drop.rs  xdp_log.rs
xtask/src/: build_ebpf.rs  run.rs
